# rusty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  devnote.md  docker-compose.yml  package.json  tsconfig.json  webpack.config.js
.cargo/: config.toml
benches/: approx.rs  mat4.rs
public/: index.html  main.css
public/assets/models/: crate.gltf  cube.gltf  house.gltf  prism.gltf  suzanne.gltf  tris.gltf  wizard.gltf
src/: approx.rs  color.rs  index.ts  lib.rs  mat4.rs  rusty.ts  state.rs  temp.rs  vec3.rs  vec4.rs  webGl.ts
src/core/: approx.rs  color.rs  mat4.rs  mod.rs  vec3.rs  vec4.rs
src/utils/: gl.ts  import.ts
